--- a/django/manager_employees/vercel.json
+++ b/django/manager_employees/vercel.json
@@ -1,13 +1,13 @@
-
-"builds": [{
-    "src": "djangoprojectname/wsgi.py",
-    "use": "@vercel/python",
-    "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-}],
-"routes": [
+{
+    "builds": [{
+        "src": "manager_employees/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    }],
+    "routes": [
         {
             "src": "/(.*)",
-            "dest": "djangoprojectname/wsgi.py"
+            "dest": "manager_employees/wsgi.py"
         }
     ]
 }
